# project_ojakdong

./: .gitignore  .gitignoregit  CMakeLists.txt  README.md  package.xml
backup/: yolov4-tiny_custom_last.weights
config/: filter_config.json
dataset/: obj.data  obj.names
dataset/train/: train.txt
dataset/train/jw/: jw_14.txt
dataset/val/: val.txt
dummy/: gui.cpp  gui.h  main.cpp
launch/: classify.launch  finetuning.launch  makeconfig.launch  my_robot_test.launch  p_control.launch  person_world.launch
model/: class_indices.json  config.json  model_hash.txt  yolov4-tiny.cfg  yolov4-tiny_custom.cfg  yolov4_custom.cfg
model/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/saved_model/variables/: variables.index
model/trt_saved_model/: fingerprint.pb
msg/: ClassifiedResult.msg  DetectionResult.msg
src/: Adjust.cpp  Adjust.hpp  AdjustNode.cpp  DetectionProcessor.cpp  DetectionProcessor.h  camera_feed.py  camera_feed.py.back2  camera_feed.py.bak  camera_processor.py  camera_processor_node.cpp.back  camera_processor_node.cpp.bak2  camera_processor_node.cpp.bak3  camera_test.cpp  check_ui.cpp  check_ui.h  check_web_ui.cpp  checkuser.cpp  checkuser.h  checkuser_web.cpp  checkuser_web.h  classify.py  classify.py.bak(inception)  classify.py.bak(tensor)  classify.py.bak2  deploy.prototxt  dlibfacetracker.h  facedetection.h  facetracker.h  finetuning.py  finetuning.py.bak(inception)  gui.cpp  gui.cpp.bak  labeling.cpp  labeling.h  labeling_web.cpp  labeling_web.h  make_dataset.cpp  make_dataset.h  makeconfig.cpp  modelhandler.h  (+3 more)
src/yolo/: makeonnx.py
testsrc/: ros_websocket_server.py
urdf/: base_and_wheels.xacro  common.xacro  my_robot.xacro  my_robot.xacro.bak  upper_frame_and_sensors.xacro
web/: app.py
web/templates/: index.html  indexv2.html
worlds/: person_world.world
